# PyClipJson

./: .pydisstore.json  LICENSE  README.md  build.sh  requirements.txt  setup.cfg  testfile.txt
.github/workflows/: ci.yml
Pyclip/: Pyclip.py
Pyclip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Pyclip/tests/: test_main.py  tests.py
Pydis/: Pydis.py  tests.py
Pydis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Pydis/tests/: tests.py
