[metadata]
name = Pyclip
version = 0.0.7
author = Timothy Bender
author_email = tbenderfcs@gmail.com
description = A simple and powerful framework for creating autoclickers/typers in python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
     Programming Language :: Python :: 2
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
[options]
packages = find:
python_requires = >=2.6
include_package_data = True
